# VNC-frontend

./: Cargo.toml  \  index.html
src/: macros.rs  main.rs  routers.rs  screen.css
src/pages/: client.rs  join.rs  mod.rs  screen.css
