[package]
name = "vnc-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = "1.4.0"
base64 = "0.21.0"
futures-util = "0.3.27"
gloo-console = "0.2.3"
gloo-events = "0.1.2"
gloo-net = {version="0.2.6",features=["eventsource","websocket"]}
gloo-storage = "0.2.2"
gloo-utils = "0.1.6"
serde = "1.0.157"
stylist = { version = "0.12.0", features = ["yew", "parser"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = {version="0.3.61",features= ["EventSource","Document","Window","Event","EventTarget","MouseEvent","KeyboardEvent"]}
ws_stream_wasm = "0.7.4"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
yew-websocket = { git = "https://github.com/security-union/yew-websocket.git", rev = "b29388a50c54c417db9cf0bf40033f62d9c616ab" }
